# solids

./: .gitignore  CMakeLists.txt  README.md  shapes_remaining.txt
data/: cube.txt  dodecahedron.txt  icosahedron.txt
data/pathological/: cubes_corner.txt  hollow_cube.txt  stacked_cube.txt  tetrahedron_edge.txt
data/platonic/: dodecahedron.txt  octahedron.txt  tetrahedron.txt
include/: loadShader.h  mesh.h  solid.h
src/: loadShader.cpp  main.cpp  mesh.cpp  solid.cpp
